force-app/main/default/objects/Opportunity/fields/Auto_Quote_Created__c.field-meta.xml
<CustomField>
    <fullName>Auto_Quote_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Quote Created</label>
    <type>Checkbox</type>
</CustomField>