force-app/main/default/objects/Opportunity/fields/Avg_Plant_Package__c.field-meta.xml
<CustomField>
    <fullName>Avg_Plant_Package__c</fullName>
    <label>Avg Plant Package (Per Lot)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>