force-app/main/default/objects/Opportunity/fields/Avg_Sod_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Avg_Sod_Sqft__c</fullName>
    <label>Avg Sod Sq Ft (Per Lot)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>