force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under $5,000</fullName>
            </value>
            <value>
                <fullName>$5,000-$10,000</fullName>
            </value>
            <value>
                <fullName>$10,000-$20,000</fullName>
            </value>
            <value>
                <fullName>$20,000+</fullName>
            </value>
            <value>
                <fullName>Not sure yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>