force-app/main/default/objects/Opportunity/fields/Budget_Comfort__c.field-meta.xml
<CustomField>
    <fullName>Budget_Comfort__c</fullName>
    <label>Budget Comfort</label>
    <length>100</length>
    <type>Text</type>
</CustomField>