force-app/main/default/objects/Opportunity/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Community this opportunity belongs to. Drives Community Name header + service schedule inheritance.</inlineHelpText>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>