force-app/main/default/objects/Opportunity/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <formula>IF( ISBLANK(Community__c), Name, Community__r.Name )</formula>
    <inlineHelpText>Community name (from Community lookup) — shown as record header.</inlineHelpText>
    <label>Community Name</label>
    <type>Text</type>
</CustomField>