force-app/main/default/objects/Opportunity/fields/Consultation_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Date_1__c</fullName>
    <label>Consultation Date 1</label>
    <type>DateTime</type>
</CustomField>