force-app/main/default/objects/Opportunity/fields/Consultation_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Date_2__c</fullName>
    <label>Consultation Date 2</label>
    <type>DateTime</type>
</CustomField>