force-app/main/default/objects/Opportunity/fields/Consultation_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Date_3__c</fullName>
    <label>Consultation Date 3</label>
    <type>DateTime</type>
</CustomField>