force-app/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>