force-app/main/default/objects/Opportunity/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon Code</label>
    <referenceTo>Coupon_Code__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>