force-app/main/default/objects/Opportunity/fields/Customer_Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Viewed_Date__c</fullName>
    <label>Customer Viewed</label>
    <type>Date</type>
</CustomField>