force-app/main/default/objects/Opportunity/fields/Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Decision_Makers__c</fullName>
    <label>Decision Makers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>