force-app/main/default/objects/Opportunity/fields/Deposit_Due__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Due__c</fullName>
    <label>Deposit Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>