force-app/main/default/objects/Opportunity/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design</label>
    <type>Checkbox</type>
</CustomField>