force-app/main/default/objects/Opportunity/fields/Design_Fee_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_Fee_Paid_Date__c</fullName>
    <label>Design Fee Paid Date</label>
    <type>Date</type>
</CustomField>