force-app/main/default/objects/Opportunity/fields/Design_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Design_Fee_Status__c</fullName>
    <label>Design Fee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Charged</fullName>
                <default>true</default>
                <label>Not Charged</label>
            </value>
            <value>
                <fullName>Charged</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>