force-app/main/default/objects/Opportunity/fields/Design_Link__c.field-meta.xml
<CustomField>
    <fullName>Design_Link__c</fullName>
    <label>Design Link</label>
    <type>Url</type>
</CustomField>