force-app/main/default/objects/Opportunity/fields/Designer_Decision__c.field-meta.xml
<CustomField>
    <fullName>Designer_Decision__c</fullName>
    <label>Designer Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Customer Response</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
            <value>
                <fullName>Customer Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>