force-app/main/default/objects/Opportunity/fields/Desired_Backyard_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Desired_Backyard_Outcome__c</fullName>
    <label>Desired Backyard Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>