force-app/main/default/objects/Opportunity/fields/Estimate_Status__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Status__c</fullName>
    <label>Estimate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>