force-app/main/default/objects/Opportunity/fields/Estimated_Lot_Count__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Lot_Count__c</fullName>
    <label>Estimated Lot Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>