force-app/main/default/objects/Opportunity/fields/Extra_Enhancements__c.field-meta.xml
<CustomField>
    <fullName>Extra_Enhancements__c</fullName>
    <label>Extra Enhancements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>