force-app/main/default/objects/Opportunity/fields/Features_Notes__c.field-meta.xml
<CustomField>
    <fullName>Features_Notes__c</fullName>
    <inlineHelpText>Free-form notes on features / site conditions.</inlineHelpText>
    <label>Features Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>