force-app/main/default/objects/Opportunity/fields/Features_Selected__c.field-meta.xml
<CustomField>
    <fullName>Features_Selected__c</fullName>
    <inlineHelpText>Features / characteristics of this opportunity.</inlineHelpText>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Model Home</fullName>
            </value>
            <value>
                <fullName>Corner Lot</fullName>
            </value>
            <value>
                <fullName>Walkout Basement</fullName>
            </value>
            <value>
                <fullName>Water Feature</fullName>
            </value>
            <value>
                <fullName>Slope / Grading</fullName>
            </value>
            <value>
                <fullName>HOA Standard</fullName>
            </value>
            <value>
                <fullName>Front Only</fullName>
            </value>
            <value>
                <fullName>Back Only</fullName>
            </value>
            <value>
                <fullName>Full Yard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>