force-app/main/default/objects/Opportunity/fields/Final_Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Invoice Paid</label>
    <type>Checkbox</type>
</CustomField>