force-app/main/default/objects/Opportunity/fields/Financing_Option__c.field-meta.xml
<CustomField>
    <fullName>Financing_Option__c</fullName>
    <label>Financing Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financing Requested</fullName>
            </value>
            <value>
                <fullName>Outside Financing</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>