force-app/main/default/objects/Opportunity/fields/FM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FM_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities (FM)</relationshipLabel>
    <relationshipName>Opportunities_FM</relationshipName>
    <type>Lookup</type>
</CustomField>