force-app/main/default/objects/Opportunity/fields/Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Submitted</label>
    <type>Checkbox</type>
</CustomField>