force-app/main/default/objects/Opportunity/fields/Homeowner_Property__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homeowner Property</label>
    <referenceTo>Homeowner_Property__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>