force-app/main/default/objects/Opportunity/fields/Is_Full_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Full_Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Full Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>