force-app/main/default/objects/Opportunity/fields/Is_Half_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Half_Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Half Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>