force-app/main/default/objects/Opportunity/fields/Is_Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Quote_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Quote Sent</label>
    <type>Checkbox</type>
</CustomField>