force-app/main/default/objects/Opportunity/fields/Last_Customer_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Response_Date__c</fullName>
    <label>Last Customer Response Date</label>
    <type>Date</type>
</CustomField>