force-app/main/default/objects/Opportunity/fields/Last_Voicemail_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Voicemail_Date__c</fullName>
    <label>Last Voicemail Date</label>
    <type>Date</type>
</CustomField>