force-app/main/default/objects/Opportunity/fields/Lot_Layout_Attached__c.field-meta.xml
<CustomField>
    <fullName>Lot_Layout_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lot Layout Attached</label>
    <type>Checkbox</type>
</CustomField>