force-app/main/default/objects/Opportunity/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charlotte</fullName>
                <default>true</default>
                <label>Charlotte</label>
            </value>
            <value>
                <fullName>Greenville</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Triad</fullName>
            </value>
            <value>
                <fullName>Asheville</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>