force-app/main/default/objects/Opportunity/fields/Model_Layout_Link__c.field-meta.xml
<CustomField>
    <fullName>Model_Layout_Link__c</fullName>
    <inlineHelpText>Link to the model home layout / floor plan file.</inlineHelpText>
    <label>Model Layout Link</label>
    <type>Url</type>
</CustomField>