force-app/main/default/objects/Opportunity/fields/Model_Pricing_Link__c.field-meta.xml
<CustomField>
    <fullName>Model_Pricing_Link__c</fullName>
    <inlineHelpText>Link to the model home pricing sheet / unit pricing file.</inlineHelpText>
    <label>Model Pricing Link</label>
    <type>Url</type>
</CustomField>