force-app/main/default/objects/Opportunity/fields/Monthly_Billing__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Billing__c</fullName>
    <label>Monthly Billing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>