force-app/main/default/objects/Opportunity/fields/Monthly_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Estimate__c</fullName>
    <label>Monthly Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>