force-app/main/default/objects/Opportunity/fields/ODL_Path__c.field-meta.xml
<CustomField>
    <fullName>ODL_Path__c</fullName>
    <label>ODL Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UMB</fullName>
            </value>
            <value>
                <fullName>Custom Build</fullName>
            </value>
            <value>
                <fullName>Lawn Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>