force-app/main/default/objects/Opportunity/fields/Portal_Published__c.field-meta.xml
<CustomField>
    <fullName>Portal_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Published</label>
    <type>Checkbox</type>
</CustomField>