force-app/main/default/objects/Opportunity/fields/Project_Vision__c.field-meta.xml
<CustomField>
    <fullName>Project_Vision__c</fullName>
    <label>Project Vision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>