force-app/main/default/objects/Opportunity/fields/Projected_Cost__c.field-meta.xml
<CustomField>
    <fullName>Projected_Cost__c</fullName>
    <label>Projected Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>