force-app/main/default/objects/Opportunity/fields/Selected_Package__c.field-meta.xml
<CustomField>
    <fullName>Selected_Package__c</fullName>
    <label>Selected Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retreat</fullName>
            </value>
            <value>
                <fullName>Entertainer</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>