force-app/main/default/objects/Opportunity/fields/Selected_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Selected_Requirements__c</fullName>
    <label>Selected Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grilling Island</fullName>
            </value>
            <value>
                <fullName>Outdoor Fireplace</fullName>
            </value>
            <value>
                <fullName>Paver Patio</fullName>
            </value>
            <value>
                <fullName>Fire Pit</fullName>
            </value>
            <value>
                <fullName>Sitting Wall</fullName>
            </value>
            <value>
                <fullName>Landscape Enhancements</fullName>
            </value>
            <value>
                <fullName>Low Voltage Lighting</fullName>
            </value>
            <value>
                <fullName>Irrigation Upgrades</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>