force-app/main/default/objects/Opportunity/fields/Service_Flag_Aqua__c.field-meta.xml
<CustomField>
    <fullName>Service_Flag_Aqua__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Flag Aqua</label>
    <type>Checkbox</type>
</CustomField>