force-app/main/default/objects/Opportunity/fields/Service_Flag_Grading__c.field-meta.xml
<CustomField>
    <fullName>Service_Flag_Grading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Flag Grading</label>
    <type>Checkbox</type>
</CustomField>