force-app/main/default/objects/Opportunity/fields/Service_Flag_Irrigation__c.field-meta.xml
<CustomField>
    <fullName>Service_Flag_Irrigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Flag Irrigation</label>
    <type>Checkbox</type>
</CustomField>