force-app/main/default/objects/Opportunity/fields/Service_Flag_Lawn_Care__c.field-meta.xml
<CustomField>
    <fullName>Service_Flag_Lawn_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Flag Lawn Care</label>
    <type>Checkbox</type>
</CustomField>