force-app/main/default/objects/Opportunity/fields/Services_Notes__c.field-meta.xml
<CustomField>
    <fullName>Services_Notes__c</fullName>
    <inlineHelpText>Free-form notes on services scope, exclusions, special conditions.</inlineHelpText>
    <label>Services Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>