force-app/main/default/objects/Opportunity/fields/Services_Selected__c.field-meta.xml
<CustomField>
    <fullName>Services_Selected__c</fullName>
    <inlineHelpText>Services included in this opportunity&apos;s scope.</inlineHelpText>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sod Install</fullName>
            </value>
            <value>
                <fullName>Sod Replace</fullName>
            </value>
            <value>
                <fullName>Plant Install</fullName>
            </value>
            <value>
                <fullName>Tree Install</fullName>
            </value>
            <value>
                <fullName>Mulch</fullName>
            </value>
            <value>
                <fullName>Pine Straw</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Aqua Install</fullName>
            </value>
            <value>
                <fullName>Aqua Check</fullName>
            </value>
            <value>
                <fullName>Aqua Pickup</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Punch</fullName>
            </value>
            <value>
                <fullName>Service Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>