force-app/main/default/objects/Opportunity/fields/Sod_Price_Per_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Sod_Price_Per_Sqft__c</fullName>
    <label>Sod Price Per Sq Ft</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>