force-app/main/default/objects/Opportunity/fields/Sod_Type__c.field-meta.xml
<CustomField>
    <fullName>Sod_Type__c</fullName>
    <label>Sod Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Fescue</fullName>
            </value>
            <value>
                <fullName>Centipede</fullName>
            </value>
            <value>
                <fullName>Seed/Straw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>