force-app/main/default/objects/Opportunity/fields/Source_Lead__c.field-meta.xml
<CustomField>
    <fullName>Source_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original homeowner Lead that generated this Opportunity. Used for web attribution when LOVING creates or repairs the Opportunity after Lead capture.</description>
    <label>Source Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Source Lead Opportunities</relationshipLabel>
    <relationshipName>Source_Lead_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>