force-app/main/default/objects/Opportunity/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP (0-2 months)</fullName>
            </value>
            <value>
                <fullName>2-4 months</fullName>
            </value>
            <value>
                <fullName>4-6 months</fullName>
            </value>
            <value>
                <fullName>6+ months</fullName>
            </value>
            <value>
                <fullName>Just exploring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>