force-app/main/default/objects/Opportunity/fields/Voicemail_Left__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Left__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voicemail Left</label>
    <type>Checkbox</type>
</CustomField>