force-app/main/default/objects/Opportunity/recordTypes/Design_Build.recordType-meta.xml
<RecordType>
    <fullName>Design_Build</fullName>
    <active>true</active>
    <businessProcess>Design_Build</businessProcess>
    <label>Design Build</label>
</RecordType>