force-app/main/default/objects/Opportunity/recordTypes/UMB.recordType-meta.xml
<RecordType>
    <fullName>UMB</fullName>
    <active>true</active>
    <businessProcess>UMB</businessProcess>
    <label>UMB</label>
</RecordType>